# tccm-api

./: .dockerignore  .env.sample  .gitignore  Pipfile  README.md  makefile  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docker/: .env.docker.sample  .env.sample  docker-compose.yml
docker/neo4j/: initialize_neo4j.sh  wrapper.sh
docker/neo4j/conf/: neo4j.conf
docker/neo4j/cyphers/: n10s_init.cypher
docker/neo4j/import/: code_set_analyte_type.ttl  icdo3m.ttl
docker/tccm-api/: Dockerfile
docker/termci-api/: Dockerfile
docs/examples/: concept_reference_ex1.ttl
static/contexts/: concept.context.jsonld
static/jsonld/jsonld_10/context/: termci_schema.context.jsonld
tccm_api/: app.py  config.py  enums.py  utils.py
tccm_api/db/: cypher_queries.py  models.py  tccm_graph.py  termci_graph.py
tccm_api/dumpers/: rdf_dumper.py
tccm_api/loader/: base_loader.py  ncit_flat_loader.py  obo_loader.py  onto_loader.py
tccm_api/routers/: code_set.py  concept_reference.py  concept_system.py  concepts.py
tccm_loader/: icdo.py  ncit.py  obo.py
termci_api/: app.py  config.py  enums.py  namespaces.py  termci_schema.py  utils.py
termci_api/db/: cypher_queries.py  termci_graph.py
termci_api/dumpers/: rdf_dumper.py
termci_api/loader/: ncit_flat_loader.py  obo_loader.py  onto_loader.py
termci_api/routers/: code_set.py  concept_reference.py  concept_system.py
termci_loader/: Copy-of-ICD-O-3.2_MFin_17042019_web.csv  Copy-of-ICD-O-3.2_MFin_17042019_web.xls  icdo.py  ncit.py  obo.py
termci_loader/sparql/: ncit.rq  pato.rq
tests/: conftest.py  docker-compose.yml  test_main.py  test_utils.py
tests/db/neo4j/: test_transaction.py
tests/docker/import/: code_set_analyte_type.ttl  icdo3m-termci.ttl
tests/files/: analyte_types.csd.yaml  pato_colors.csd.yaml
tests/http/: code_set.http  concept_reference.http  concept_system.http  http-client.env.json
