##########################
# Setup.py Configuration #
##########################
[metadata]
name = tccm-api
version = 0.1.0-dev
description = TCCM rest api
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/hot-ecosystem/termci-api
download_url = https://github.com/cmungall/sssom/releases
project_urls =
    Bug Tracker = https://github.com/cmungall/sssom/issues
    Source Code = https://github.com/cmungall/sssom
    Documentation = https://sssom.readthedocs.io

# Author information
author = Dazhi Jiao
author_email = djiao@jhu.edu
maintainer = Dazhi Jiao
maintainer_email = djiao@jhu.edu

# License Information
license = MIT
license_file = LICENSE

[options]
install_requires =
    aiofiles
    biolinkml
    fastapi
    neo4j
    owlready2
    pandas
    prefixcommons
    pydantic
    pyld
    python-docx
    python-dotenv
    python-multipart
    rdflib
    rdflib-pyld-compat
    rfc3986
    uvicorn

# Random options
zip_safe = false
include_package_data = True


python_requires = >=3.6

# Where is my code
packages = find:
#package_dir =
#    = .
